# Cookiecutter_fastAPI_template_v1

./: cookiecutter.json
.github/workflows/: verify_project.yml
github_workflow/: verify_project.yml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TODO.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
{{cookiecutter.project_slug}}/.github/workflows/: build.yml  ci.yml  entrypoint.sh  release.yml
{{cookiecutter.project_slug}}/alembic/: env.py
{{cookiecutter.project_slug}}/app/: main.py
{{cookiecutter.project_slug}}/app/core/: config.py  db.py
{{cookiecutter.project_slug}}/app/models/: base.py
{{cookiecutter.project_slug}}/cookiecutter_venv/: pyvenv.cfg
{{cookiecutter.project_slug}}/tests/: test_main.py
