[project]
name = "quoteapi"
version = "0.1.0"
description = "Secure Quote API"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "asyncpg",
    "redis",
    "pydantic-settings",
    "alembic",
    "python-json-logger",
    "pytest",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
]

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "C", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
